--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -19,7 +19,39 @@
     "goals": "目标",
     "tasks": "任务",
     "progress": "进度",
-    "language": "语言"
+    "language": "语言",
+    "categories": {
+      "family": "家庭",
+      "work": "工作",
+      "health": "健康",
+      "personal": "个人"
+    }
+  },
+  "progressPage": {
+    "overview": "总览",
+    "stats": {
+      "totalGoals": "总目标数",
+      "completedGoals": "已完成目标",
+      "inProgressGoals": "进行中目标",
+      "avgTaskCompletion": "平均任务完成率",
+      "totalGoalsDesc": "已创建的目标总数。",
+      "completedGoalsDesc": "已标记为完成的目标。",
+      "inProgressGoalsDesc": "当前活跃且尚未完成的目标。",
+      "avgTaskCompletionDesc": "所有任务的平均完成率。"
+    },
+    "analytics": {
+      "title": "目标分析",
+      "all": "所有",
+      "active": "活跃",
+      "completed": "已完成",
+      "allGoals": "所有目标",
+      "goalCount": "{{count}} 个目标",
+      "daysRemaining": "剩余 {{count}} 天",
+      "pastDue": "已逾期",
+      "targetDate": "目标日期",
+      "completedOn": "完成于：{{date}}",
+      "noGoalsFound": "还没有完成的目标"
+    }
   },
   "auth": {
     "LOS": "LOS",
@@ -234,13 +266,7 @@
       "description_label": "描述（可选）",
       "category_label": "类别",
       "target_date_label": "目标日期",
-      "create_goal_button": "创建目标",
-      "categories": {
-        "Family": "家庭",
-        "Work": "工作",
-        "Health": "健康",
-        "Personal": "个人"
-      }
+      "create_goal_button": "创建目标"
     }
   },
   "tasks": {
