--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -48,6 +48,7 @@
       "goalCount": "{{count}} 个目标",
       "daysRemaining": "剩余 {{count}} 天",
       "pastDue": "已逾期",
+      "dueToday": "今天到期",
       "targetDate": "目标日期",
       "completedOn": "完成于：{{date}}",
       "noGoalsFound": "还没有完成的目标"
@@ -149,7 +150,12 @@
     "notifications": "通知",
     "enabled": "已启用",
     "disabled": "已禁用",
-    "notAvailable": "不可用"
+    "notAvailable": "不可用",
+    "today_status": "今日状态",
+    "task_completion": "任务完成度",
+    "completed_tasks_count": "{{completed}} / {{total}} 任务已完成",
+    "active_goals_by_category": "按类别划分的活跃目标",
+    "no_active_goals": "未找到活跃目标。"
   },
   "sidebar": {
     "losmax": "LOS"
